Finish reordering and release 1.7
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -78,6 +78,7 @@ linktoc=page}
 \newcommand{\cO}{\mathcal{O}}
 \newcommand{\cH}{\mathcal{H}}
 \newcommand{\cI}{\mathcal{I}}
+\newcommand{\cT}{\mathcal{T}}
 
 %\newcommand{\C}{\mathbb{C}}
 \newcommand{\N}{\mathbb{N}}
@@ -153,7 +154,7 @@ linktoc=page}
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-  Version 1.6\\
+  Version 1.7\\
   \today
 \end{center}
 \vfill
@@ -369,16 +370,12 @@ Before taking a little detour into Lagrangian mechanics, let's anticipate some o
 
 \section{Hamilton's variational principle}\label{sec:varpri}
 
-\begin{tcolorbox}
-  Throughout this section we assume that our system has $n$ degrees of freedom and its configuration space is $\R^n$.
-\end{tcolorbox}
-
 In order to leave more space to discuss Hamiltonian systems and their geometry, we will be brief in our account of Lagrangian mechanics and calculus of variations. For a more detailed account refer to \cite[Part II]{book:arnold}.
 This, however, should not confuse you: Lagrangian mechanics plays a role as large as Hamiltonian mechanics in the development of classical mechanics.
 
-In fact, one should not be surprised if there are many sources claiming that the most general formulation of the equations of motion in classical mechanics comes from the \emph{principle of least action} or \emph{Hamilton's variational principle}. Indeed, as we will see this sits at the roots of Lagrangian mechanics and the Euler-Lagrange equations.
+In fact, one should not be surprised if there are many sources claiming that the most general formulation of the equations of motion in classical mechanics comes from the \emph{principle of least action} or \emph{Hamilton's variational principle}.
 
-According to this principle, the equations of motion of a mechanical system are characterized by a function $L \equiv L(q, \dot q, t) : \R^n \times \R^n \times \R \to \R$, called the \emph{lagrangian (function)} of the system.
+According to this principle, stated in 1834 the equations of motion of a mechanical system are characterized by a function $L \equiv L(q, \dot q, t) : \R^n \times \R^n \times \R \to \R$, called the \emph{lagrangian (function)} of the system.
 
 \begin{example}
   The lagrangian of a non-relativistic particle with mass $m > 0$ in a potential $U : \R^n \to \R$ is
@@ -386,7 +383,7 @@ According to this principle, the equations of motion of a mechanical system are 
     L(q, \dot q, t) = \frac12 m \|\dot q\|^2 - U(q),
   \end{equation}
   which is the difference between the so-called kinetic energy of the particle and its so-called potential energy.
-  We will come back to this shortly.
+  We will see where this equation comes from in Section~\ref{sec:dynamicspps}.
 \end{example}
 
 Given a curve $\gamma:[t_1, t_2] \to \R^n$, we define the \emph{action} functional
@@ -809,7 +806,7 @@ We don't have to go very far to see an example of this, but we can also see that
 
 Consider the equation
 \begin{equation}\label{eq:oscillator}
-  \ddot x = F(x), \qquad F:\R\to\R, \quad t\in R.
+  \ddot x = F(x), \qquad F:\R\to\R, \quad t\in \R.
 \end{equation}
 It should come as no surprise, that introducing the auxiliary variable $y(t) = \dot x(t)$, \eqref{eq:oscillator} is equivalent to the system of first order equations
 \begin{equation}\label{eq:oscillatorfirstorder}
@@ -820,13 +817,16 @@ It should come as no surprise, that introducing the auxiliary variable $y(t) = \
   \end{aligned}
   \right..
 \end{equation}
-The solutions of \eqref{eq:oscillatorfirstorder} are parametric curves\footnote{Usually called integral curves of the ordinary differential equation.} $(x(t),y(t))$ in the $(x,y)$-space.
-
+The solutions of \eqref{eq:oscillatorfirstorder} are parametric curves\footnote{Usually called integral curves of the ordinary differential equation.} $(x(t),y(t)):\R\to\R^2$ in the $(x,y)$-space.
+%
 If $y\neq0$, we can apply the chain rule, $\frac{\d y}{\d t} = \frac{\d y}{\d x} \frac{\d x}{\d t}$, to get
 \begin{equation}\label{eq:lef}
   \frac{F(x)}y = \frac{\dot y}{\dot x} = \frac{\d y}{\d x}.
 \end{equation}
-Reasoning formally\footnote{For a rigorous understanding of this, you can refer to \cite[Equation (5.1) with $f=y$ and Remark 5.1.3]{lectures:aom:seri}.} for a moment, we can rephrase this as $y \d y - F(x) \d x = 0$.
+Reasoning formally\footnote{For a rigorous understanding of this, you can refer to \cite[Equation (5.1) with $f=y$ and Remark 5.1.3]{lectures:aom:seri}.} for a moment, we can rephrase this as
+\begin{equation}
+  y\,\d y - F(x)\, \d x = 0.
+\end{equation}
 
 Getting rid of time and considering equation \eqref{eq:lef} comes with a price, the solution is now an implicit curve $y(x)$, but also with a huge advantage: this new equation can be solved exactly!
 
@@ -834,7 +834,7 @@ Let $U(x)$ be such that $F(x) = -\frac{\d U}{\d x}$ and define $H(x, y) = \frac1
 The function $H$ is called the \emph{total energy} of the mechanical system and we are already mimicking the notation that we will use when we will describe hamiltonian systems.
 
 \begin{theorem}\label{thm:ham1}
-  Let $H(x, y) := \frac12 y^2 + U(x)$ with $U(x)$ such that $F(x) = -\frac{\d U}{\d x}$.
+  Let $H(x, y) := \frac12 y^2 + U(x)$ where $U:\R\to\R$ is such that $F(x) = -\frac{\d U}{\d x}$.
   Then, the level curves $H(x,y) = C$ are the integral curves of \eqref{eq:oscillatorfirstorder}.
 \end{theorem}
 \begin{proof}
@@ -868,7 +868,7 @@ A curve $(x(t), y(t))$ spanned by a solution of \eqref{eq:oscillatorfirstorder} 
   \label{fig:pendulum}
 \end{figure}
 
-From these examples we already see that phase curves can consist of only one point. In such case they are called \emph{equilibrium} points.
+From these examples we already see that phase curves can consist of only one point. In such cases, the poinst are called \emph{equilibrium} points.
 
 \subsection{The conservation of energy}\label{sec:energy}
 
@@ -946,21 +946,6 @@ In other words, if the function $I$ remains constant along the paths followed by
   You can read a nice historical account on how scientists came up with the principle of least action in \cite{lectures:baez}.
 \end{remark}
 
-\begin{exercise}
-  \begin{enumerate}
-    \item Derive formula \eqref{eq:energyFromL} for a natural lagrangian on a riemannian manifold $(M,g)$.
-    \item Given any lagrangian of the form $L = L(q, \dot q)$ on $TM$, show that the definition of energy \eqref{eq:energy1} does not depend on the choice of local coordinates on $M$.\\\textit{Hint: look at Exercise~\ref{exe:coordinatesInd}.}
-    \item Consider the following free lagrangian on a riemannian manifold $(M, g)$:
-          \begin{equation}
-            L = \frac12 g_{ij}(q)\dot q^i \dot q^j.
-          \end{equation}
-          We have already seen in Exercise \ref{exe:geodesic1} that the solutions of the Euler-Lagrange equations are geodesic curves.
-          Show that geodesic curves have constant speed, i.e., $\lag\dot q, \dot q\rag = \mathrm{const}$.
-          %\item Consider a time-dependent lagrangian $L = L(q,\dot q, t)$. Show that $\frac{\d}{\d t} E = \frac{\partial E}{\partial t}$.
-  \end{enumerate}
-\end{exercise}
-
-
 % Exercise: H\'enon-Heiles 1964
 % Prove that H is a conserved quantity
 % Energy hypersurface is 3-sphere: R^3 + {\infty} and also union of two solid tori glued along the common boundary (2-torus)
@@ -969,16 +954,17 @@ In other words, if the function $I$ remains constant along the paths followed by
 
 % Lecture: page 22, Chapter 2.5 Arnold on conservation of energy in 2 deg of freedom.
 
-\subsection{Back to one degree of freedom, again}\label{sec:1deg-again}
+\subsection{Fun with the phase portrait}\label{sec:1deg-again}
 
 As we observed in the previous sections, the conservation of energy has remarkable consequences for systems with one degree of freedom.
 In this final section, we will investigate this into more details.
 
-A general natural lagrangian for a system with one degree of freedom in isolation has the form
+A general natural lagrangians for a system with one degree of freedom in isolation has the form
 \begin{equation}
-  L = \frac12 g(q)\dot q^2 - U(q).
+  L = \frac12 g(q)\dot q^2 - U(q),
 \end{equation}
-As one would hope, in cartesian coordinates $q = x$ we obtain the natural lagrangian $L = \frac{m \dot x^2}{2} - U(x)$.
+we will justify this in Section~\ref{sec:lagrangianonmanifold}.
+As one would hope, in cartesian coordinates $q = x$ that is just the natural lagrangian $L = \frac{m \dot x^2}{2} - U(x)$.
 In this case we can easily observe that Theorem \ref{thm:ham1} and Theorem \ref{thm:conservationEnergy} coincide.
 
 As we have seen in Section~\ref{sec:bdf}, the conservation of energy,
@@ -986,28 +972,32 @@ As we have seen in Section~\ref{sec:bdf}, the conservation of energy,
   \frac{m \dot x^2}{2} + U(x) = E \in\R \mbox{ constant},
 \end{equation}
 allows us to explicitly describe phase curves, i.e., solutions of the equations of motion in the plane $(x, y := \dot x)$.
-On each phase curve the value of the energy is constant, so the phase curve lies entirely in one energy level (the set of points $H(x,y)=E$).
+On each phase curve the value of the energy is constant, so the phase curve lies entirely in one energy level (the set of points $H(x,y)=E$). It turns out that, even though we got rid of the time, we can manipulate the system to reconstruct some interesting time-related properties.
 
-More explicitly, we can use \eqref{eq:cenergy1} to integrate the equations of motion
+To begin with, we can use \eqref{eq:cenergy1} to integrate the equations of motion
 \begin{equation}
   m \ddot x = - \frac{\d U(x)}{\d x}
 \end{equation}
 by quadrature, i.e., solving the equation as
 \begin{equation}
-  t_2 - t_1 = \frac m2 \int_{x_1}^{x_2} \frac{\d x}{\sqrt{E-U(x)}},
+  t_2 - t_1 = \sqrt{\frac m2} \int_{x_1}^{x_2} \frac{\d x}{\sqrt{E-U(x)}},
 \end{equation}
 and to reason about further properties of the solutions.
+To grasp where this comes from, it is enough to spell out
+\begin{equation}
+  \frac m2 \left(\frac{\d x}{\d t}\right)^2 = E - U(x) 
+\end{equation}
+and perform some formal computations with the differentials.
 
-Given that the kinetic energy is always non-negative, $E \geq U(x)$, and thus, the point can move only in the intervals $U(x) \leq E$.
-At the points $x^* = x^*(E)$ such that $U(x^*) = E$, we have $\dot x^* = 0$ and if the motion is bounded between two such points, say $x_1^*$ and $x_2^*$, then the motion has to be finite.
-Furthermore, it must be an \emph{oscillatory} motion: the point particles move inside the potential well between the points $x_1^*$ and $x_2^*$.
+Given that the kinetic energy is always non-negative, $E \geq U(x)$, and thus, the point can move only in the intervals $\{ x\in\R \mid U(x) \leq E\}$. At the points $x^* = x^*(E)$ such that $U(x^*) = E$, we have $\dot x^* = 0$ and the system is stationary. If the motion is bounded between two such stationary points, say $x_1^*$ and $x_2^*$, then the motion has to be finite.
+Furthermore, it must be \emph{oscillatory}: the point particles move inside the potential well between the points $x_1^*$ and $x_2^*$.
 
 Thanks to time reversibility, the time of travel between $x_1^*$ and $x_2^*$ is the same as the time to return from $x_2^*$ to $x_1^*$, therefore the period of oscillation is given by
 \begin{equation}\label{eq:osc}
-  T(E) = \sqrt{2m} \int_{x^*_1}^{x^*_2} \frac{\d x}{\sqrt{E-U(x)}}.
+  \cT(E) = \sqrt{2m} \int_{x^*_1}^{x^*_2} \frac{\d x}{\sqrt{E-U(x)}}.
 \end{equation}
 
-A special subset of these finite motions is the one on the critical points of the force, i.e., the points $x^*$ such that
+A special subset of these finite motions is the one at the critical points of the force, i.e., the points $x^*$ such that
 \begin{equation}
   \frac{\partial U}{\partial x}(x^*) = 0.
 \end{equation}
@@ -1018,52 +1008,51 @@ Any other motion, not bounded by two points $x^*$, is going to be infinite (or s
 See also \cite[Chapter 2.4]{book:arnold}, especially Figures 10, 11 and 12.
 
 \begin{remark}
-  Integral curves carry more information than what immediately meets the eye.
+  Integral curves carry a lot more information than what immediately meets the eye.
   Observe for example that there is a remarkable relation between the period of an oscillation and the area of the integral curve $H(x,y) = E$:
-  if $A$ is the area enclosed by the integral curve, then the period $T$ can be obtained as
+  if $A$ is the area enclosed by the integral curve, then the period $\cT$ can be obtained as
   \begin{equation}
-    T = \frac{\d A}{\d E}.
+    \cT = \frac{\d A}{\d E}.
   \end{equation}
 
   We will see this in more generality once we deal with action--angle coordinates, but let's sketch the proof in this case.
 
-  From $H(x,y) = E$ we get $y = \pm \sqrt{2(U(x) - E)}$. Say that the curve intercepts the $x$-axis at the two return points $x_m < x_M$, then the area inside the curve, is given by
+  From $H(x,y) = E$ we get $y = \pm \sqrt{2(U(x) - E)}$, where I considered unit mass for notational simplicity. Say that the curve intercepts the $x$-axis at the two return points $x_m < x_M$, then the area inside the curve, is given by
   \begin{equation}
     A = 2\int_{x_m}^{x_M}\sqrt{2(E - U(x))} \d x.
   \end{equation}
   As we saw above, the period can be computed as
   \begin{equation}
-    T = 2\int_{x_m}^{x_M} \frac{\d x}{\sqrt{2(E - U(x))}}.
+    \cT = 2\int_{x_m}^{x_M} \frac{\d x}{\sqrt{2(E - U(x))}}.
   \end{equation}
-
+  %
   With the above in mind, the result follows by taking the derivative of $A$ with respect to $E$.
 \end{remark}
 
 \begin{example}\label{ex:small-osc}
-
   Looking back at Example \ref{ex:sprPen}, the lagrangian of a pendulum of length $l$ and mass $m$ is given by
   \begin{equation}
     L = \frac{ml^2 \dot x^2}2 + mgl \cos x,
   \end{equation}
   thus $E = \frac{ml^2 \dot x^2}2 - mgl \cos x$.
-  The motion is bounded for $|E| \leq mgl$. For any such motions, the angle of maximal oscillation corresponds to a solution of $U(x) = E$, thus is given by $E = -mgl \cos x^*$ for some $x^*$.
+  As one can see in Figure~\ref{fig:pendulum}, the motion is bounded for $|E| \leq mgl$. For any such motion, the angle of maximal oscillation corresponds to a solution of $U(x) = E$, thus is given by $E = -mgl \cos x^*_E$ for some $x^*_E$.
   Finally, \eqref{eq:osc} implies that the period of oscillation is
   \begin{equation}
-    T(E) = 4 \sqrt{\frac l{2g}} \int_0^{x^*(E)} \frac{\d x}{\sqrt{\cos(x) - \cos(x^*(E))}},
+    \cT(E) = 4 \sqrt{\frac l{2g}} \int_0^{x^*_E} \frac{\d x}{\sqrt{\cos(x) - \cos(x^*_E)}},
   \end{equation}
   which, as we briefly discussed previously, does not depend on the mass of the pendulum, but only on its length!
 
   It is possible to use the previous formula to express the period of oscillation in terms of elliptic integrals
   \begin{equation}
-    T = 4 \sqrt{\frac lg} K\left (\sin(x^*/2)\right), \quad
+    \cT = 4 \sqrt{\frac lg} K\left (\sin(x^*/2)\right), \quad
     K(k):= \int_0^{\pi/2} \frac{\d \theta}{\sqrt{1 - k^2\sin^2(\theta)}}.
   \end{equation}
   If the oscillations are small, $x^* = \epsilon \ll 1$, this form allows for an immediate expansion of the form
   \begin{equation}\label{eq:smallosc-preview}
-    T_\mathrm{p} = 2\pi \sqrt{\frac lg} \left(1 + \frac{\epsilon^2}{16} + O(\epsilon^4)\right).
+    \cT_\mathrm{p} = 2\pi \sqrt{\frac lg} \left(1 + \frac{\epsilon^2}{16} + O(\epsilon^4)\right).
   \end{equation}
 
-  Equation \eqref{eq:smallosc-preview} implies that for \emph{small oscillations}, the period of oscillation does not depend on the amplitude (and thus on the energy $E$). Which is the same result that you get by approximating the potential for small $x$ by a second order polynomial
+  Equation \eqref{eq:smallosc-preview} implies that for \emph{small oscillations}, the period of oscillation is also independent of the amplitude (and thus on the energy $E$). Which is the same result that you get by approximating the potential for small $x$ by a second order polynomial
   \begin{equation}
     U(x) = -mgl \cos x = C + \frac{mgl}2 x^2 + O(x^4)
   \end{equation}
@@ -1076,10 +1065,10 @@ See also \cite[Chapter 2.4]{book:arnold}, especially Figures 10, 11 and 12.
   which we already solved in Example \ref{ex:sprPen}.
   In this specific case $\omega = \sqrt{g/l}$ and the corresponding period of oscillation is
   \begin{equation}
-    T_{\mathrm{ho}} = \frac{2\pi}\omega = 2\pi \sqrt{\frac lg} \sim T_\mathrm{p}.
+    \cT_{\mathrm{ho}} = \frac{2\pi}\omega = 2\pi \sqrt{\frac lg} \sim \cT_\mathrm{p}.
   \end{equation}
 
-  This is an example of a more general phenomenon that we will discuss soon in details.
+  This is an example of a more general phenomenon that we will discuss in detail in Section~\ref{sec:soc}.
 \end{example}
 
 \begin{figure}[htbp]
@@ -1179,7 +1168,7 @@ One final example, with two degrees of freedom, before jumping into variational 
 \end{example}
 
 \begin{exercise}[Huygens problem]
-  Determine the form of even potentials, $U(x) = U(-x)$, giving rise to \emph{isochronal} oscillations, i.e., whose period $T$ does not depend on $E$.
+  Determine the form of even potentials, $U(x) = U(-x)$, giving rise to \emph{isochronal} oscillations, i.e., whose period $\cT$ does not depend on $E$. (Beware, this is hard!)
 
   Use your result to study the following problem.
   A point particle of mass $m$ moves without friction under the effect of a gravitational potential with uniform acceleration $g$ on the curve
@@ -1376,6 +1365,20 @@ Replacing the scalar product, i.e., the inner product in the Euclidean space, we
 
 Solutions of \eqref{eq:geodesic} are the \emph{geodesic curves} on the riemannian manifold $M$. Locally, geodesics are not just minimizing the action $S$, but also the lengths!
 %Later on, we will come back to this as well.
+
+\begin{exercise}
+  \begin{enumerate}
+    \item Derive formula \eqref{eq:energyFromL} for a natural lagrangian on a riemannian manifold $(M,g)$.
+    \item Given any lagrangian of the form $L = L(q, \dot q)$ on $TM$, show that the definition of energy \eqref{eq:energy1} does not depend on the choice of local coordinates on $M$.\\\textit{Hint: look at Exercise~\ref{exe:coordinatesInd}.}
+    \item Consider the following free lagrangian on a riemannian manifold $(M, g)$:
+          \begin{equation}
+            L = \frac12 g_{ij}(q)\dot q^i \dot q^j.
+          \end{equation}
+          We have already seen in Exercise \ref{exe:geodesic1} that the solutions of the Euler-Lagrange equations are geodesic curves.
+          Show that geodesic curves have constant speed, i.e., $\lag\dot q, \dot q\rag = \mathrm{const}$.
+          %\item Consider a time-dependent lagrangian $L = L(q,\dot q, t)$. Show that $\frac{\d}{\d t} E = \frac{\partial E}{\partial t}$.
+  \end{enumerate}
+\end{exercise}
 
 \begin{example}\label{ex:sphericalP}
   Let us consider a spherical pendulum of mass $m$ and length $l$, i.e., a point particle of mass $m$ moving without friction on the surface of a sphere of radius $l$.
